<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>depthai_ctrl</name>
  <version>0.3.0</version>
  <description>DepthAI camera control ROS2 node</description>
  <maintainer email="manuel.segarra-abad@unikie.com">Manuel Segarra-Abad</maintainer>
  <license>TODO: License declaration</license>

  <exec_depend>rclcpp</exec_depend>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
